ingress/api-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-prod
  annotations:
    dev.okteto.com/generate-host: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /api/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: api-auth
                port:
                  number: 8080
          - path: /api/images/?(.*)
            pathType: Prefix
            backend:
              service:
                name: api-images
                port:
                  number: 8081
          - path: /api/product-feedbacks/?(.*)
            pathType: Prefix
            backend:
              service:
                name: api-product-feedbacks
                port:
                  number: 8082
